<resources>
    <string name="app_name">Shopping List</string>

    <!-- basics -->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <!-- Strings for Classes -->

    <!-- AddItemActivity -->
    <string name="addItemAct_title">Add new item</string>
    <string name="addItemAct_defaultCategoryName" translatable="false"> </string>
    <string name="addItemAct_defaultAmount" translatable="false"> </string>

    <!-- AddShoppingListActivity -->
    <string name="addShoppingListAct_title">Add new shopping list</string>

    <!-- EditItemActivity -->
    <string name="editItemAct_title">Edit item</string>

    <!-- EditShoppingListActivity -->
    <string name="editShoppingListAct_title">Edit shopping list</string>

    <!-- ItemsActivity -->
    <string name="itemAct_searchHint">Search items</string>

    <!-- ShoppingListsActivity -->
    <string name="shoppingListsAct_title">Shopping lists</string>
    <string name="shoppingListAct_reallyDeleteSL">Do you really want to delete the selected shopping list(s)?</string>

    <!-- SuggestionsActivity -->
    <string name="suggestionsAct_nameTitle">Name suggestions</string>
    <string name="suggestionsAct_categoryTitle">Category suggestions</string>
    <string name="suggestionsAct_amountTitle">Amount suggestions</string>
    <string name="suggestionsAct_priceTitle">Price suggestions</string>


    <!-- Strings for layouts -->

    <!-- activity_add_item / activity_edit_item -->
    <string name="actAddItem_nameHint">Name</string>
    <string name="actAddItem_categoryHint">Category</string>
    <string name="actAddItem_amountHint">Amount</string>
    <string name="actAddItem_priceHint">Price</string>
    <string name="actAddItem_checkBoxText">Important</string>
    <string name="actAddItem_deleteItem">Delete</string>
    <string name="actAddItem_alertTitle">Please enter a name!</string>

    <!-- activity_add_shopping_list -->
    <string name="actAssShoppingList_nameHint">Name</string>

    <!-- menu_items -->
    <string name="menuItems_popupMenuTitle">Sort by …</string>
    <string name="menuItems_edit_title">Edit</string>

    <!-- popup menu items -->
    <string name="popup_name">Name</string>
    <string name="popup_category">Category</string>
    <string name="popup_amount">Amount</string>
    <string name="popup_price">Price</string>
    <string name="popup_hint">Show …</string>

    <!-- Toasts -->
    <!-- adding -->
    <string name="toast_itemAdded">Item added</string>
    <string name="toast_shoppingListAdded">Shopping list added</string>
    <string name="toast_addingFailed">Adding failed</string>

    <!-- editing -->
    <string name="toast_itemEdited">Item edited</string>
    <string name="toast_shoppingListEdited">Shopping list edited</string>
    <string name="toast_editingFailed">Editing failed</string>

</resources>
